冲突处理和estimate更新

--- a/src/main/resources/static/css/estimate.css
+++ b/src/main/resources/static/css/estimate.css
@@ -53,9 +53,9 @@
 		} */
 	img{
 		width: 181px;
-		height: 182px;
-		margin-top: 50px;
-		margin-left: 10px;
+		height: 280px;
+		/* margin-top: 50px;
+		margin-left: 10px; */
 	}
 	.bott{
 		margin-bottom: 30px;
