--- a/src/main/resources/static/css/receive-task.css
+++ b/src/main/resources/static/css/receive-task.css
@@ -6,4 +6,10 @@
 	
 .big-img:hover {
 		cursor: pointer;
+		border-color: #9a9fa4;
+        box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.85);
+}
+
+.layui-carousel{
+	background-color: transparent;
 }
