--- a/src/main/resources/static/css/estimate.css
+++ b/src/main/resources/static/css/estimate.css
@@ -1,10 +1,10 @@
-.layui-input-top {
+/* .layui-input-top {
 		padding: 6px;
-	}
+	} */
 	
 	.layui-input-one {
 		width: 181px;
-		height: 25px;
+		/* height: 25px; */
 	}
 	
 	.pbtn {
@@ -47,28 +47,33 @@
 	.right-marg{
 		margin-right: 10%;
 	}
+	
 	/* .pro-div{
 			width: 800px;
 			margin-left: 50px;
 		} */
+		
 	.big-img{
 		width: 180px;
 		height: 150px;
 		/* margin-top: 50px;
 		margin-left: 10px; */
 	}
+	
 	.img_p{
 		text-align: center;
 	}
+	
 	.bott{
 		margin-bottom: 30px;
 	}
+	
 	.h2c{
 		background-color: #b2b2b2;
 	}
 		
 	.labelr{
 		width: 90px;
-		margin-left: -16px;
+		margin-left: -10px;
 	}
 	
