--- a/src/main/resources/static/css/report.css
+++ b/src/main/resources/static/css/report.css
@@ -54,9 +54,9 @@
     #imgList li, #imgZmList li, #imgListdz li #imgListpz li #imgListyy li {
         width: 180px;
         height: 150px;
-        margin-right:3px;
         float: left;
         margin-right:3px;
+        margin-bottom:3px;
         list-style: none;
         list-style-type: none;
         display: inline-block;
