--- a/src/main/resources/static/css/estimate.css
+++ b/src/main/resources/static/css/estimate.css
@@ -5,6 +5,11 @@
 	body{
 		min-width: 750px;
 	}
+	
+	.layui-collapse{
+		border: none;
+	}
+	
 	.layui-input-one {
 		width: 181px;
 		/* height: 25px; */
@@ -79,7 +84,7 @@
 	}
 	
 	.h2c{
-		background-color: #b2b2b2;
+		background-color: #B8DEE5;;
 	}
 		
 	.labelr{
