--- a/src/main/resources/static/css/estimate.css
+++ b/src/main/resources/static/css/estimate.css
@@ -4,6 +4,8 @@
 	
 	body{
 		min-width: 750px;
+		background-color: #FAFDFD;
+		overflow: hidden;
 	}
 	
 	.layui-collapse{
@@ -20,12 +22,33 @@
 		margin-left: 60px;
 		margin-right: 50px;
 		color: blue;
+		text-decoration: underline;
 	}
 	
 	.btn {
-		width: 100px;
+		color: black;
+		width: 85px;
 		margin-left: 30px;
 		margin-right: 30px;
+		background-color: #F1F5F7;
+		border-style: solid;
+		border-color: #D3DBDE;
+		border-width: 1px;
+		border-radius: 5px;
+		color: green;
+		padding: 0;
+	}
+	
+	/* .layui-icon{
+		color: green;
+	} */
+	#sdateall{
+		margin-left: 100px;
+	}
+	
+	.btn:hover {
+		cursor: pointer;
+		background-color: #3A95CA;
 	}
 	
 	#pro{
@@ -49,14 +72,40 @@
 		/* padding: 0px,50px; */
 	}
 	
-	.tdp td {
-		padding: 0px;
-	}
-	
 	.right-marg{
 		margin-right: 10%;
 	}
 	
+	.right-table{
+		margin-right: 10%;
+	}
+	
+	.layui-table-view{
+		border: none;
+	}
+	
+	.layui-table-header{
+		background-color: #FFF;
+		border: none;
+	}
+	.layui-table{
+		border-width: 1px;
+		border-style: solid;
+		border-color: #e6e6e6;
+		
+	}
+	
+	.layui-table-body{
+		overflow: hidden;
+	}
+	
+	tr{
+		border-bottom: solid;
+		border-left: solid;
+		border-width: 2px;
+		border-color: #e6e6e6;
+		border-top: none;
+	}
 	/* .pro-div{
 			width: 800px;
 			margin-left: 50px;
@@ -84,7 +133,7 @@
 	}
 	
 	.h2c{
-		background-color: #B8DEE5;;
+		background-color: #EDF6FA;;
 	}
 		
 	.labelr{
