--- a/src/main/resources/static/css/report.css
+++ b/src/main/resources/static/css/report.css
@@ -139,7 +139,7 @@
 }
 
 .primary-btn{
-	background-color: #f1f5f7;
+	background-color: #EDF6FA;
 	color: black;
 	border:1px solid rgb(230,230,230);
 	border-radius: 10px;
@@ -159,4 +159,34 @@
 	color: black;
 	border:1px solid rgb(183,182,184);
 } */
+
+.layui-layer-btn>.layui-layer-btn0{
+	background-color: #EDF6FA;
+	color: black;
+	border:1px solid rgb(230,230,230);
+	border-radius: 10px;
+}
+
+.layui-layer-btn>.layui-layer-btn1{
+	background-color: #EDF6FA;
+	color: black;
+	border:1px solid rgb(230,230,230);
+	border-radius: 10px;
+}
+
+.layui-layer-btn>.layui-layer-btn2{
+	background-color: #EDF6FA;
+	color: black;
+	border:1px solid rgb(230,230,230);
+	border-radius: 10px;
+}
+
+.layui-layer-btn0,.layui-layer-btn1,.layui-layer-btn2{
+	vertical-align: bottom;
+}
+
+.layui-layer-btn0:hover,.layui-layer-btn1:hover ,.layui-layer-btn2:hover {
+	color: white;
+	background-color: #3a95ca;
+}
 
