--- a/src/main/resources/static/css/report-trace.css
+++ b/src/main/resources/static/css/report-trace.css
@@ -62,3 +62,7 @@ body,.layui-table-body tr{
 #div-btn-toolbar button{
 	float: right;
 }
+
+.layui-table-col-special .layui-table-cell{
+	padding: 0 5px;
+}
