--- a/src/main/resources/static/css/report.css
+++ b/src/main/resources/static/css/report.css
@@ -138,6 +138,10 @@
 	margin-right: 10%;
 }
 
+#problemmass{
+	background-color:#fafdfd;
+}
+
 .primary-btn{
 	background-color: #EDF6FA !important;
 	color: black !important;
